crates/strz-analysis/tests/snapshots/document_snapshots__document_snapshot@identifiers__dynamic_views_ok.snap
---
source: crates/strz-analysis/tests/document_snapshots.rs
expression: "SnapshotView::from(&snapshot)"
---
SnapshotView {
    has_syntax_errors: false,
    diagnostics: [],
    include_directives: [],
    identifier_modes: [],
    symbols: [
        Symbol {
            id: SymbolId(
                0,
            ),
            kind: SoftwareSystem,
            display_name: "System",
            binding_name: Some(
                "system",
            ),
            binding_span: Some(
                TextSpan {
                    start_byte: 32,
                    end_byte: 38,
                    start_point: TextPoint {
                        row: 2,
                        column: 8,
                    },
                    end_point: TextPoint {
                        row: 2,
                        column: 14,
                    },
                },
            ),
            span: TextSpan {
                start_byte: 32,
                end_byte: 342,
                start_point: TextPoint {
                    row: 2,
                    column: 8,
                },
                end_point: TextPoint {
                    row: 9,
                    column: 9,
                },
            },
            parent: None,
            syntax_node_kind: "software_system",
        },
        Symbol {
            id: SymbolId(
                1,
            ),
            kind: Container,
            display_name: "Web Application",
            binding_name: Some(
                "web",
            ),
            binding_span: Some(
                TextSpan {
                    start_byte: 79,
                    end_byte: 82,
                    start_point: TextPoint {
                        row: 3,
                        column: 12,
                    },
                    end_point: TextPoint {
                        row: 3,
                        column: 15,
                    },
                },
            ),
            span: TextSpan {
                start_byte: 79,
                end_byte: 112,
                start_point: TextPoint {
                    row: 3,
                    column: 12,
                },
                end_point: TextPoint {
                    row: 3,
                    column: 45,
                },
            },
            parent: Some(
                SymbolId(
                    0,
                ),
            ),
            syntax_node_kind: "container",
        },
        Symbol {
            id: SymbolId(
                2,
            ),
            kind: Container,
            display_name: "API Application",
            binding_name: Some(
                "api",
            ),
            binding_span: Some(
                TextSpan {
                    start_byte: 125,
                    end_byte: 128,
                    start_point: TextPoint {
                        row: 4,
                        column: 12,
                    },
                    end_point: TextPoint {
                        row: 4,
                        column: 15,
                    },
                },
            ),
            span: TextSpan {
                start_byte: 125,
                end_byte: 288,
                start_point: TextPoint {
                    row: 4,
                    column: 12,
                },
                end_point: TextPoint {
                    row: 7,
                    column: 13,
                },
            },
            parent: Some(
                SymbolId(
                    0,
                ),
            ),
            syntax_node_kind: "container",
        },
        Symbol {
            id: SymbolId(
                3,
            ),
            kind: Component,
            display_name: "Sign In Controller",
            binding_name: Some(
                "signin",
            ),
            binding_span: Some(
                TextSpan {
                    start_byte: 177,
                    end_byte: 183,
                    start_point: TextPoint {
                        row: 5,
                        column: 16,
                    },
                    end_point: TextPoint {
                        row: 5,
                        column: 22,
                    },
                },
            ),
            span: TextSpan {
                start_byte: 177,
                end_byte: 216,
                start_point: TextPoint {
                    row: 5,
                    column: 16,
                },
                end_point: TextPoint {
                    row: 5,
                    column: 55,
                },
            },
            parent: Some(
                SymbolId(
                    2,
                ),
            ),
            syntax_node_kind: "component",
        },
        Symbol {
            id: SymbolId(
                4,
            ),
            kind: Component,
            display_name: "Security Component",
            binding_name: Some(
                "security",
            ),
            binding_span: Some(
                TextSpan {
                    start_byte: 233,
                    end_byte: 241,
                    start_point: TextPoint {
                        row: 6,
                        column: 16,
                    },
                    end_point: TextPoint {
                        row: 6,
                        column: 24,
                    },
                },
            ),
            span: TextSpan {
                start_byte: 233,
                end_byte: 274,
                start_point: TextPoint {
                    row: 6,
                    column: 16,
                },
                end_point: TextPoint {
                    row: 6,
                    column: 57,
                },
            },
            parent: Some(
                SymbolId(
                    2,
                ),
            ),
            syntax_node_kind: "component",
        },
        Symbol {
            id: SymbolId(
                5,
            ),
            kind: Container,
            display_name: "Database",
            binding_name: Some(
                "database",
            ),
            binding_span: Some(
                TextSpan {
                    start_byte: 301,
                    end_byte: 309,
                    start_point: TextPoint {
                        row: 8,
                        column: 12,
                    },
                    end_point: TextPoint {
                        row: 8,
                        column: 20,
                    },
                },
            ),
            span: TextSpan {
                start_byte: 301,
                end_byte: 332,
                start_point: TextPoint {
                    row: 8,
                    column: 12,
                },
                end_point: TextPoint {
                    row: 8,
                    column: 43,
                },
            },
            parent: Some(
                SymbolId(
                    0,
                ),
            ),
            syntax_node_kind: "container",
        },
    ],
    references: [
        Reference {
            kind: RelationshipSource,
            raw_text: "web",
            span: TextSpan {
                start_byte: 352,
                end_byte: 355,
                start_point: TextPoint {
                    row: 11,
                    column: 8,
                },
                end_point: TextPoint {
                    row: 11,
                    column: 11,
                },
            },
            target_hint: Element,
            container_node_kind: "relationship",
            containing_symbol: None,
        },
        Reference {
            kind: RelationshipDestination,
            raw_text: "signin",
            span: TextSpan {
                start_byte: 359,
                end_byte: 365,
                start_point: TextPoint {
                    row: 11,
                    column: 15,
                },
                end_point: TextPoint {
                    row: 11,
                    column: 21,
                },
            },
            target_hint: Element,
            container_node_kind: "relationship",
            containing_symbol: None,
        },
        Reference {
            kind: RelationshipSource,
            raw_text: "signin",
            span: TextSpan {
                start_byte: 399,
                end_byte: 405,
                start_point: TextPoint {
                    row: 12,
                    column: 8,
                },
                end_point: TextPoint {
                    row: 12,
                    column: 14,
                },
            },
            target_hint: Element,
            container_node_kind: "relationship",
            containing_symbol: None,
        },
        Reference {
            kind: RelationshipDestination,
            raw_text: "security",
            span: TextSpan {
                start_byte: 409,
                end_byte: 417,
                start_point: TextPoint {
                    row: 12,
                    column: 18,
                },
                end_point: TextPoint {
                    row: 12,
                    column: 26,
                },
            },
            target_hint: Element,
            container_node_kind: "relationship",
            containing_symbol: None,
        },
        Reference {
            kind: RelationshipSource,
            raw_text: "security",
            span: TextSpan {
                start_byte: 456,
                end_byte: 464,
                start_point: TextPoint {
                    row: 13,
                    column: 8,
                },
                end_point: TextPoint {
                    row: 13,
                    column: 16,
                },
            },
            target_hint: Element,
            container_node_kind: "relationship",
            containing_symbol: None,
        },
        Reference {
            kind: RelationshipDestination,
            raw_text: "database",
            span: TextSpan {
                start_byte: 468,
                end_byte: 476,
                start_point: TextPoint {
                    row: 13,
                    column: 20,
                },
                end_point: TextPoint {
                    row: 13,
                    column: 28,
                },
            },
            target_hint: Element,
            container_node_kind: "relationship",
            containing_symbol: None,
        },
        Reference {
            kind: ViewScope,
            raw_text: "api",
            span: TextSpan {
                start_byte: 531,
                end_byte: 534,
                start_point: TextPoint {
                    row: 17,
                    column: 16,
                },
                end_point: TextPoint {
                    row: 17,
                    column: 19,
                },
            },
            target_hint: Element,
            container_node_kind: "dynamic_view",
            containing_symbol: None,
        },
        Reference {
            kind: RelationshipSource,
            raw_text: "web",
            span: TextSpan {
                start_byte: 558,
                end_byte: 561,
                start_point: TextPoint {
                    row: 18,
                    column: 12,
                },
                end_point: TextPoint {
                    row: 18,
                    column: 15,
                },
            },
            target_hint: Element,
            container_node_kind: "dynamic_relationship",
            containing_symbol: None,
        },
        Reference {
            kind: RelationshipDestination,
            raw_text: "signin",
            span: TextSpan {
                start_byte: 565,
                end_byte: 571,
                start_point: TextPoint {
                    row: 18,
                    column: 19,
                },
                end_point: TextPoint {
                    row: 18,
                    column: 25,
                },
            },
            target_hint: Element,
            container_node_kind: "dynamic_relationship",
            containing_symbol: None,
        },
        Reference {
            kind: RelationshipSource,
            raw_text: "signin",
            span: TextSpan {
                start_byte: 609,
                end_byte: 615,
                start_point: TextPoint {
                    row: 19,
                    column: 12,
                },
                end_point: TextPoint {
                    row: 19,
                    column: 18,
                },
            },
            target_hint: Element,
            container_node_kind: "dynamic_relationship",
            containing_symbol: None,
        },
        Reference {
            kind: RelationshipDestination,
            raw_text: "security",
            span: TextSpan {
                start_byte: 619,
                end_byte: 627,
                start_point: TextPoint {
                    row: 19,
                    column: 22,
                },
                end_point: TextPoint {
                    row: 19,
                    column: 30,
                },
            },
            target_hint: Element,
            container_node_kind: "dynamic_relationship",
            containing_symbol: None,
        },
        Reference {
            kind: RelationshipSource,
            raw_text: "security",
            span: TextSpan {
                start_byte: 670,
                end_byte: 678,
                start_point: TextPoint {
                    row: 20,
                    column: 12,
                },
                end_point: TextPoint {
                    row: 20,
                    column: 20,
                },
            },
            target_hint: Element,
            container_node_kind: "dynamic_relationship",
            containing_symbol: None,
        },
        Reference {
            kind: RelationshipDestination,
            raw_text: "database",
            span: TextSpan {
                start_byte: 682,
                end_byte: 690,
                start_point: TextPoint {
                    row: 20,
                    column: 24,
                },
                end_point: TextPoint {
                    row: 20,
                    column: 32,
                },
            },
            target_hint: Element,
            container_node_kind: "dynamic_relationship",
            containing_symbol: None,
        },
    ],
}
