crates/strz-analysis/tests/snapshots/document_snapshots__document_snapshot@identifiers__leading_digit_identifiers_ok.snap
---
source: crates/strz-analysis/tests/document_snapshots.rs
expression: "SnapshotView::from(&snapshot)"
---
SnapshotView {
    has_syntax_errors: false,
    diagnostics: [],
    include_directives: [],
    identifier_modes: [],
    symbols: [
        Symbol {
            id: SymbolId(
                0,
            ),
            kind: Person,
            display_name: "User",
            binding_name: Some(
                "1user",
            ),
            binding_span: Some(
                TextSpan {
                    start_byte: 32,
                    end_byte: 37,
                    start_point: TextPoint {
                        row: 2,
                        column: 8,
                    },
                    end_point: TextPoint {
                        row: 2,
                        column: 13,
                    },
                },
            ),
            span: TextSpan {
                start_byte: 32,
                end_byte: 53,
                start_point: TextPoint {
                    row: 2,
                    column: 8,
                },
                end_point: TextPoint {
                    row: 2,
                    column: 29,
                },
            },
            parent: None,
            syntax_node_kind: "person",
        },
        Symbol {
            id: SymbolId(
                1,
            ),
            kind: SoftwareSystem,
            display_name: "System",
            binding_name: Some(
                "system1",
            ),
            binding_span: Some(
                TextSpan {
                    start_byte: 62,
                    end_byte: 69,
                    start_point: TextPoint {
                        row: 3,
                        column: 8,
                    },
                    end_point: TextPoint {
                        row: 3,
                        column: 15,
                    },
                },
            ),
            span: TextSpan {
                start_byte: 62,
                end_byte: 142,
                start_point: TextPoint {
                    row: 3,
                    column: 8,
                },
                end_point: TextPoint {
                    row: 5,
                    column: 9,
                },
            },
            parent: None,
            syntax_node_kind: "software_system",
        },
        Symbol {
            id: SymbolId(
                2,
            ),
            kind: Container,
            display_name: "API",
            binding_name: Some(
                "1api",
            ),
            binding_span: Some(
                TextSpan {
                    start_byte: 110,
                    end_byte: 114,
                    start_point: TextPoint {
                        row: 4,
                        column: 12,
                    },
                    end_point: TextPoint {
                        row: 4,
                        column: 16,
                    },
                },
            ),
            span: TextSpan {
                start_byte: 110,
                end_byte: 132,
                start_point: TextPoint {
                    row: 4,
                    column: 12,
                },
                end_point: TextPoint {
                    row: 4,
                    column: 34,
                },
            },
            parent: Some(
                SymbolId(
                    1,
                ),
            ),
            syntax_node_kind: "container",
        },
    ],
    references: [
        Reference {
            kind: RelationshipSource,
            raw_text: "1user",
            span: TextSpan {
                start_byte: 152,
                end_byte: 157,
                start_point: TextPoint {
                    row: 7,
                    column: 8,
                },
                end_point: TextPoint {
                    row: 7,
                    column: 13,
                },
            },
            target_hint: Element,
            container_node_kind: "relationship",
            containing_symbol: None,
        },
        Reference {
            kind: RelationshipDestination,
            raw_text: "1api",
            span: TextSpan {
                start_byte: 161,
                end_byte: 165,
                start_point: TextPoint {
                    row: 7,
                    column: 17,
                },
                end_point: TextPoint {
                    row: 7,
                    column: 21,
                },
            },
            target_hint: Element,
            container_node_kind: "relationship",
            containing_symbol: None,
        },
    ],
}
