crates/strz-analysis/tests/snapshots/document_snapshots__document_snapshot@identifiers__multi_line_invalid_nesting_err.snap
---
source: crates/strz-analysis/tests/document_snapshots.rs
expression: "SnapshotView::from(&snapshot)"
---
SnapshotView {
    has_syntax_errors: true,
    diagnostics: [
        SyntaxDiagnostic {
            kind: ErrorNode,
            message: "unexpected syntax",
            span: TextSpan {
                start_byte: 142,
                end_byte: 163,
                start_point: TextPoint {
                    row: 6,
                    column: 16,
                },
                end_point: TextPoint {
                    row: 6,
                    column: 37,
                },
            },
        },
    ],
    include_directives: [],
    identifier_modes: [],
    symbols: [
        Symbol {
            id: SymbolId(
                0,
            ),
            kind: SoftwareSystem,
            display_name: "Software \\\n            System",
            binding_name: Some(
                "softwareSystem",
            ),
            binding_span: Some(
                TextSpan {
                    start_byte: 32,
                    end_byte: 46,
                    start_point: TextPoint {
                        row: 2,
                        column: 8,
                    },
                    end_point: TextPoint {
                        row: 2,
                        column: 22,
                    },
                },
            ),
            span: TextSpan {
                start_byte: 32,
                end_byte: 177,
                start_point: TextPoint {
                    row: 2,
                    column: 8,
                },
                end_point: TextPoint {
                    row: 7,
                    column: 13,
                },
            },
            parent: None,
            syntax_node_kind: "software_system",
        },
    ],
    references: [],
}
